Fix scrolling when images overflow on small screen

--- a/logokilke/static/css/custom.css
+++ b/logokilke/static/css/custom.css
@@ -24,12 +24,13 @@ body {
 
 .layer {
     background-color: rgba(255, 255, 255, 0.9);
-    position: fixed;
+    position: relative;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     padding-top: 50px;
+    overflow: auto;
 }
 
 div.form {
@@ -38,7 +39,7 @@ div.form {
 
 img.output {
     width:100%;
-    max-width:300px;
+    max-width: 300px;
 }
 
 /* === NAVBAR === */
